# SASWISE

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: consistency_balancing.md
examples/: SAMPLE_OUTPUT.md  adopt_mnist_mlp.py  demo_uncertainty_classification.py
experiment/templates/variants/: variant_info.json
experiment/train_configs/: cifar10_resnet_diversification.yaml
scripts/: adopt_checkpoint.py
src/: __init__.py
src/adapters/: __init__.py  _internal.py  assembly.py  decompose.py  disk_warehouse.py  finetune.py  uncertainty.py  variant_init.py
src/models/: __init__.py  block_warehouse.py  build_warehouse_cli.py  ensemble_evaluator.py  model_assembler.py  model_assembly.py  read_warehouse_info.py  train_diversification.py  train_mnist.py  warehouse_core.py
src/models/warehouse_setup/: __init__.py  generate_hierarchy.py
src/models/warehouse_setup/block_analysis/: __init__.py  __main__.py  analyzer.py  parser.py  saver.py
src/models/warehouse_setup/create_variant/: __init__.py  __main__.py  creator.py
src/models/warehouse_setup/hierarchy/: __init__.py  build_hierarchy.py  model_hierarchy.py  save_hierarchy.py
src/models/warehouse_setup/variant/: __init__.py
src/training/: fine_tuner.py
src/utils/: training_logger.py
tests/: test_CIFAR10_ResNet.py  test_block_warehouse.py  test_warehouse_setup.py
